Fixed .module buttonLink alignment

--- a/template/templates/jacobson/css/styles.css
+++ b/template/templates/jacobson/css/styles.css
@@ -27,5 +27,8 @@
 #bottom .buttonLink {
 	position: absolute;
 	bottom: 0;
-	left: 26%;
+	left: 50%;
+	margin-left: -52px;
+}
+
 }
